<resources>
    <string name="app_name">ateat</string>

    <!--Sign In-->
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="signin_email">회원가입없이 바로 사용</string>
    <string name="signin_google">Google 계정으로 로그인</string>
    <string name="signin_kakao">카카오톡 계정으로 로그인</string>
    <string name="signup_complete">회원가입 성공</string>
    <string name="signin_complete">로그인 성공</string>
    <string name="signout">로그아웃</string>
    <string name="signout_success">로그아웃 성공</string>
    <string name="signout_fail">로그아웃 실패</string>
    <string name="signout_fail_null">이메일과 비밀번호를 입력해 주세요</string>

    <!--welcome-->
    <string name="welcome">반갑습니다!</string>
    <string name="nickWelcome">nickName 님! 반갑습니다!</string>
    <string name="welcome_text">내 계정에서 사용할\n닉네임과 프로필 사진을\n설정해주세요.</string>
    <string name="next">다음</string>


    <!--Bottom Navigation View-->
    <string name="home">홈</string>
    <string name="view_all">모아보기</string>
    <string name="like">맛집</string>
    <string name="camera">카메라</string>
    <string name="account">내계정</string>


    <!--Account-->
    <string name="acc_post">게시물</string>
    <string name="acc_ate">먹은거</string>
    <string name="acc_eat">먹을거</string>
    <string name="acc_like">좋아요</string>
    <string name="acc_profile">Profile</string>
    <string name="acc_count_0">0</string>


    <!--Comment-->
    <string name="send">보내기</string>


    <!--Add Photo-->
    <string name="upload_image">사진 올리기</string>
    <string name="hint_image_content">내용</string>
    <string name="upload_success">업로드 성공</string>
    <string name="upload_fail">업로드 실패</string>


    <!--Toolbar-->
    <string name="back">Back</string>


    <!--etc-->
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


</resources>
